fix the footer being always visible at bottom

--- a/wirewerks/client/ui/src/styles/general/_ww.scss
+++ b/wirewerks/client/ui/src/styles/general/_ww.scss
@@ -19,7 +19,7 @@ html, body {
 ww-app {
 	display: flex;
 	flex-direction: column;
-	height:100vh;
+	//height:100vh;
 	min-height: 100vh;
 	position: relative;
 
